@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
 	<packages>
-		<package name="R7.University" type="Library" version="01.06.00">
+		<package name="R7.University" type="Library" version="01.06.01">
 			<friendlyName>R7.University</friendlyName>
 			<description>This is a common library for all R7.University modules. By installing this package, you also install all available R7.University modules, such as Launchpad, Division, Employee, EmployeeList, etc.</description>
 			<owner>
@@ -93,7 +93,7 @@
                         </script>
                         <script type="UnInstall">
                             <name>SqlDataProvider\Uninstall.SqlDataProvider</name>
-                            <version>01.06.00</version>
+                            <version>01.06.01</version>
                         </script>
 					</scripts>
 				</component>
@@ -134,7 +134,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Launchpad" type="Module" version="01.06.00">
+		<package name="R7.University.Launchpad" type="Module" version="01.06.01">
 			<friendlyName>R7.University.Launchpad</friendlyName>
 			<description>This is a simple module to display some records from database table.</description>
 			<owner>
@@ -307,7 +307,7 @@
 				</component>
       		</components>
 		</package>
-		<package name="R7.University.Employee" type="Module" version="01.06.00">
+		<package name="R7.University.Employee" type="Module" version="01.06.01">
 			<friendlyName>_Employee</friendlyName>
 			<description>This is a module to display information about single employee.</description>
 			<owner>
@@ -411,7 +411,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDetails" type="Module" version="01.06.00">
+		<package name="R7.University.EmployeeDetails" type="Module" version="01.06.01">
 			<friendlyName>_EmployeeDetails</friendlyName>
 			<description>This is a module to display detailed information about single employee.</description>
 			<owner>
@@ -495,7 +495,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeList" type="Module" version="01.06.00">
+		<package name="R7.University.EmployeeList" type="Module" version="01.06.01">
 			<friendlyName>_EmployeeList</friendlyName>
 			<description>This is a simple module to display a list of employees.</description>
 			<owner>
@@ -588,7 +588,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.Division" type="Module" version="01.06.00">
+		<package name="R7.University.Division" type="Module" version="01.06.01">
 			<friendlyName>_Division</friendlyName>
 			<description>This is a module to display information about single division.</description>
 			<owner>
@@ -681,7 +681,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.EmployeeDirectory" type="Module" version="01.06.00">
+		<package name="R7.University.EmployeeDirectory" type="Module" version="01.06.01">
 			<friendlyName>R7.University.EmployeeDirectory</friendlyName>
 			<description>This is a module to display information about employees.</description>
 			<owner>
@@ -774,7 +774,7 @@
 				</component>
 			</components>
 		</package>
-		<package name="R7.University.DivisionDirectory" type="Module" version="01.06.00">
+		<package name="R7.University.DivisionDirectory" type="Module" version="01.06.01">
 			<friendlyName>R7.University.DivisionDirectory</friendlyName>
 			<description>This is a module to display information about divisions.</description>
 			<owner>
@@ -880,7 +880,7 @@
 				</component>
 			</components>
 		</package>
-        <package name="R7.University.EduProgramDirectory" type="Module" version="01.06.00">
+        <package name="R7.University.EduProgramDirectory" type="Module" version="01.06.01">
             <friendlyName>R7.University.EduProgramDirectory</friendlyName>
             <description>This is a module to display information about educational programs.</description>
             <owner>
